crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_document_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "input": [
    {
      "content": [
        {
          "text": "Summarize this document.",
          "type": "input_text"
        }
      ],
      "role": "user",
      "type": "message"
    }
  ],
  "model": "gpt-5.4",
  "stream": true
}
