crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_empty_tool_argument_buffer.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "input": [
    {
      "arguments": "{}",
      "call_id": "call_1",
      "name": "ping",
      "type": "function_call"
    }
  ],
  "model": "gpt-5.4",
  "stream": true
}
