crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_image_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "input": [
    {
      "content": [
        {
          "text": "What's in this image?",
          "type": "input_text"
        }
      ],
      "role": "user",
      "type": "message"
    }
  ],
  "model": "gpt-5.4",
  "stream": true
}
