crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_long_stop_sequence_list.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Hello."
        }
      ]
    }
  ],
  "stream": true
}
