crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_multi_turn_text.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: "encode(&req,\n&fixture_profile()).expect(\"encode must succeed for this fixture profile\")"
---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "What is the capital of France?"
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Paris."
        }
      ]
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "And its population?"
        }
      ]
    }
  ],
  "stream": true
}
