crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_reasoning_budget_variant.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "input": [
    {
      "content": [
        {
          "text": "Summarize this briefly.",
          "type": "input_text"
        }
      ],
      "role": "user",
      "type": "message"
    }
  ],
  "model": "gpt-5.4",
  "reasoning": {
    "effort": "medium"
  },
  "stream": true
}
