crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_single_turn_text.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: "encode(&req, &fixture_profile())"
---
{
  "input": [
    {
      "content": [
        {
          "text": "What is 2+2?",
          "type": "input_text"
        }
      ],
      "role": "user",
      "type": "message"
    }
  ],
  "model": "gpt-5.4",
  "stream": true
}
