crates/roundhouse-provider/tests/snapshots/golden_openai_responses__openai_responses_system_prompt_with_cache_breakpoint.snap
---
source: crates/roundhouse-provider/tests/golden_openai_responses.rs
expression: body
---
{
  "input": [
    {
      "content": [
        {
          "text": "Hello.",
          "type": "input_text"
        }
      ],
      "role": "user",
      "type": "message"
    }
  ],
  "instructions": "You are a careful assistant.",
  "model": "gpt-5.4",
  "stream": true
}
